# fastapi_rest_mongo

./: .pdm-python  README.md  pyproject.toml
